--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
   </head>
   
   <body>
-      <nav class="navbar navbar-expand navbar-white bg-white p-0 clear-fix">
-        <div class = "heading my-0 p-0 w-100 clear-fix">
-          <a class="navbar-brand font-weight-bold text-center text-white float-left p-4">Chloe Zhou</a>
-
-          <ul class="navbar-nav navbar-right float-right bg-white pt-2 ">
+      <nav class="navbar navbar-expand navbar-white bg-white p-0 clear-fix ">
+       <div class = "navbar heading p-0 clear-fix justify-content-between">
+          <a class="navbar-brand font-weight-bold text-center text-white m-0 px-4 pt-4 pb-3">Chloe Zhou</a>
+          <ul class="navbar-nav navbar-right bg-white pt-2 ">
               <li class="nav-item d-inline-block" >
                 <a class="nav-link" href="index.html">About&nbsp&nbsp&nbsp<span>|</span><span class="sr-only">(current)</span></a>
               </li>
@@ -28,20 +27,35 @@
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
           </ul>
-      </div> 
+        </div>
       </nav>
 
   <main>
-    <h1>About</h1>
-    <hr>
-    <div class="container">
+    <div class="container p-4 bg-light mt-4 maincontent">
       <div class = "row">
-
-
+        <div class = "col-12 contentheader">
+          <h1>About</h1>
+          <hr>
+        </div>
       </div>
-    </div>
-
+      <div class = "row secondrow d-flex">
+        <div class = "col-xs-12 float-left">
+          <img src="assets/images/profile.jpg" class="img-fluid col-xl-2 col-lg-3 col-md-6 col-sm-6 float-left p-3" alt="profile">       
+          <p class = "wrap p-3">  Hello! My name is Chloe Zhou, and I am a graduate student majoring in Computer Engineering at Santa Clara University, with a master degree in finance and 2 years of professional experience in financial industry. I am currently seeking for entry-level software engineering opportunities or Internship/Co-ops in 2019. I have a diverse set of skills, ranging from HTML & CSS, Javascript to SQL, Tableau and C++.<br> <br>Hobbies: web programming, violin, jazz, hiking...<p>
+        </div>
+        <div class = "col-12 clearfix">
+        </div>
+      </div>
+    </div> 
   </main>
+  <!--<section class = "clearfix">
+    hello
+  </section>-->
+  <footer class="footer mt-auto py-3 h-15 bg-dark">
+      <div class = "container">
+        <span class = "text-muted">Copyright&nbsp@</span>
+      </div>
+  </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
