--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       </nav>
 
   <main>
-    <div class="container p-4 bg-light mt-4 maincontent">
-      <div class = "row">
+    <div class="container py-4 px-5 bg-light mt-5 maincontent">
+      <div class = "row mt-4">
         <div class = "col-12 contentheader">
-          <h1>About</h1>
+          <h3 class = "pb-2 font-weight-bold">About Me</h3>
           <hr>
         </div>
       </div>
       <div class = "row secondrow d-flex">
         <div class = "col-xs-12 float-left">
-          <img src="assets/images/profile.jpg" class="img-fluid col-xl-2 col-lg-3 col-md-6 col-sm-6 float-left p-3" alt="profile">       
-          <p class = "wrap p-3">  Hello! My name is Chloe Zhou, and I am a graduate student majoring in Computer Engineering at Santa Clara University, with a master degree in finance and 2 years of professional experience in financial industry. I am currently seeking for entry-level software engineering opportunities or Internship/Co-ops in 2019. I have a diverse set of skills, ranging from HTML & CSS, Javascript to SQL, Tableau and C++.<br> <br>Hobbies: web programming, violin, jazz, hiking...<p>
+          <img src="assets/images/profile.jpg" class="img-fluid col-xl-2 col-lg-3 col-md-6 col-sm-6 float-left p-4" alt="profile">       
+          <p class = "wrap p-4">  Hello! My name is Chloe Zhou, and I am a graduate student majoring in Computer Engineering at Santa Clara University, with a master degree in finance and 2 years of professional experience in financial industry. I am currently seeking for entry-level software engineering opportunities or Internship/Co-ops in 2019. I have a diverse set of skills, ranging from HTML & CSS, Javascript to SQL, Tableau and C++.<br> <br>Hobbies: web programming, violin, jazz, hiking...<p>
         </div>
         <div class = "col-12 clearfix">
         </div>
