--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>About</title>
+    <title>Portfolio</title>
 
   </head>
   
@@ -31,26 +31,51 @@
       </nav>
 
   <main>
-    <div class="container p-4 bg-light mt-5 maincontent">
-      <div class = "row">
+    <div class="container py-4 px-5 bg-light mt-5 maincontent">
+      <div class = "row mt-4">
         <div class = "col-12 contentheader">
-          <h2 class = "font-weight-bold">About</h2>
+          <h3 class = "pb-2 font-weight-bold">Porfolio</h3>
           <hr>
         </div>
       </div>
-      <div class = "row secondrow d-flex">
-        <div class = "col-xs-12 float-left">
-          <img src="assets/images/profile.jpg" class="img-fluid col-xl-2 col-lg-3 col-md-6 col-sm-6 float-left p-3" alt="profile">       
-          <p class = "wrap p-3">  Hello! My name is Chloe Zhou, and I am a graduate student majoring in Computer Engineering at Santa Clara University, with a master degree in finance and 2 years of professional experience in financial industry. I am currently seeking for entry-level software engineering opportunities or Internship/Co-ops in 2019. I have a diverse set of skills, ranging from HTML & CSS, Javascript to SQL, Tableau and C++.<br> <br>Hobbies: web programming, violin, jazz, hiking...<p>
+      <div class = "row project">
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
+          <img src="assets/images/project.jpg" alt = "project" class = "w-100" height = "auto">
+          <div class = "text w-100" >Hangman</div>   
         </div>
-        <div class = "col-12 clearfix">
+        <div class = "col-1">
+        </div>
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
+          <img src="assets/images/project.jpg" alt = "project" class = "w-100" height = "auto">
+          <div class = "text w-100">RPG Game</div> 
+        </div>
+      </div>
+      <div class = "row project">
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
+          <img src="assets/images/project.jpg" alt = "project" class = "w-100" height = "auto">
+          <div class = "text w-100" >Trivia Game</div>   
+        </div>
+        <div class = "col-1">
+        </div>
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
+          <img src="assets/images/project.jpg" alt = "project" class = "w-100" height = "auto">
+          <div class = "text w-100">Rutgers Info Widget</div> 
+        </div>
+      </div>
+      <div class = "row project">
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
+          <img src="assets/images/project.jpg" alt = "project" class = "w-100" height = "auto">
+          <div class = "text w-100" >Rock Paper Scissors</div>   
+        </div>
+        <div class = "col-1">
+        </div>
+        <div class = "col-xl-4 col-lg-4 col-md-5 col-sm-5 col-xs-12 ">
         </div>
       </div>
     </div> 
   </main>
-  <!--<section class = "clearfix">
-    hello
-  </section>-->
+
+
   <footer class="footer mt-auto py-3 h-15 bg-dark">
       <div class = "container">
         <span class = "text-muted">Copyright&nbsp@</span>
