--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>About</title>
+    <title>About Me</title>
 
   </head>
   
@@ -48,9 +48,7 @@
       </div>
     </div> 
   </main>
-  <!--<section class = "clearfix">
-    hello
-  </section>-->
+  
   <footer class="footer mt-auto py-3 h-15 bg-dark">
       <div class = "container">
         <span class = "text-muted">Copyright&nbsp@</span>
